@@ -4,6 +4,7 @@
 	+ Added group polices
 	+ Added time period option to policies
 	+ Added per-object group policies
+	+ Added antivirus support
 0.12.99
 	+ Add support for reporting
 	+ User support
